src/test/deca/context/invalid/with-object/cast_compatible_other_daughter.deca
class Animal{
    int x, y;
}

class Car{
    int speed;
}

class Bus extends Car{}

{
    Bus bus = new Bus();
    (Animal) (bus);
}